--- a/index.html
+++ b/index.html
@@ -13,188 +13,176 @@
 </head>
 <body>
   <div class="wrapper">
-    <header class="sections header" id="section-1">
-      <div class="container">
-        <div class="header__top">
-          <div class="header__top-left">
-            <div class="logo">
-              <a href="index.html" class="logo__link">
-                <img class="logo__img" src="img/icons/logo.svg" alt="Mr. Burger логотип">
-              </a>
+    <main class="main">
+      <header class="section header" id="section-1">
+        <div class="container">
+          <div class="header__top">
+            <div class="header__top-left">
+              <div class="logo">
+                <a href="index.html" class="logo__link">
+                  <img class="logo__img" src="img/icons/logo.svg" alt="Mr. Burger логотип">
+                </a>
+              </div>
             </div>
+            <div class="header__top-right">
+              <div class="header__top-btn">
+                <a href="#" class="section__btn">Заказать</a>
+              </div>
+              <nav class="main-nav">
+                <ul class="main-nav__list">
+                  <li class="main-nav__item"><a class="main-nav__link" href="#">О нас</a></li>
+                  <li class="main-nav__item"><a class="main-nav__link" href="#">Бургеры</a></li>
+                  <li class="main-nav__item"><a class="main-nav__link" href="#">Команда</a></li>
+                  <li class="main-nav__item"><a class="main-nav__link" href="#">Муню</a></li>
+                  <li class="main-nav__item"><a class="main-nav__link" href="#">Отзывы</a></li>
+                  <li class="main-nav__item"><a class="main-nav__link" href="#">Контакты</a></li>
+                </ul>
+              </nav>
+            </div><!-- header__right END-->
+          </div><!-- header__top END-->
+          <div class="header__bottom">
+            <figure class="header__burger clearfix">
+              <img src="img/burger-header.png" alt="Вкусный бургер" class="header__burger__img">
+              <figcaption class="header__burger__text"><h2 class="section__title section__title--burger">Мы делаем</h2> натуральные бургеры</figcaption>
+            </figure>
           </div>
-          <div class="header__top-right">
-            <a href="#" class="btn-order">Заказать</a>
-            <nav class="main-nav">
-              <ul class="main-nav__list">
-                <li class="main-nav__item"><a class="main-nav__link" href="#">О нас</a></li>
-                <li class="main-nav__item"><a class="main-nav__link" href="#">Бургеры</a></li>
-                <li class="main-nav__item"><a class="main-nav__link" href="#">Команда</a></li>
-                <li class="main-nav__item"><a class="main-nav__link" href="#">Муню</a></li>
-                <li class="main-nav__item"><a class="main-nav__link" href="#">Отзывы</a></li>
-                <li class="main-nav__item"><a class="main-nav__link" href="#">Контакты</a></li>
-              </ul>
-            </nav>
-          </div><!-- header__right END-->
-        </div><!-- header__top END-->
-        <div class="header__bottom">
-          <figure class="header__burger clearfix">
-            <img src="img/burger-header.png" alt="Вкусный бургер" class="header__burger__img">
-            <figcaption class="header__burger__text"><h2 class="main__title main__title--burger">Мы делаем</h2> натуральные бургеры</figcaption>
-          </figure>
+        </div><!-- container END-->
+      </header>
+      <section class="section best" id="section-2">
+        <div class="container container--best">
+          <div class="best__content">
+            <h2 class="section__title section__title--best">Мы лучшие</h2>
+            <ul class="best__list">
+              <li class="best__item">
+                <div class="best__block-image">
+                  <img class="best__block-img" src="img/icons/meat.svg" alt="Meat in fier">
+                </div>
+                <h3 class="best__block-title">100% свежее мясо</h3>
+                <div class="best__block-text">
+                  Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
+                </div>
+              </li>
+              <li class="best__item">
+                <div class="best__block-image">
+                <img class="best__block-img" src="img/icons/hand.svg" alt="Hand made">
+              </div>
+                <h3 class="best__block-title">Ручная сборка</h3>
+                <div class="best__block-text">
+                  Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие притягивает сюжетный реформаторский пафос.
+                </div>
+              </li>
+              <li class="best__item">
+                <div class="best__block-image">
+                  <img class="best__block-img" src="img/icons/natural.svg" alt="salat burger">
+                </div>
+                <h3 class="best__block-title">Натуральные инградиенты</h3>
+                <div class="best__block-text">
+                  Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div><!-- container END-->
-    </header>
-    <section class="sections best" id="section-2">
-      <div class="container container--best">
-        <div class="best__content">
-          <h2 class="main__title main__title--best">Мы лучшие</h2>
-          <ul class="best__list">
-            <li class="best__item">
-              <div class="best__block-image">
-                <img class="best__block-img" src="img/icons/meat.svg" alt="Meat in fier">
-              </div>
-              <h3 class="best__block-title">100% свежее мясо</h3>
-              <div class="best__block-text">
-                Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
-              </div>
-            </li>
-            <li class="best__item">
-              <div class="best__block-image">
-              <img class="best__block-img" src="img/icons/hand.svg" alt="Hand made">
-            </div>
-              <h3 class="best__block-title">Ручная сборка</h3>
-              <div class="best__block-text">
-                Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие притягивает сюжетный реформаторский пафос.
+      </section>
+
+      <section class="section comments" id="section-7">
+        <div class="comments__block">
+          <ul class="comments__list">
+            <li class="comments__item" style="background-image: url(img/users/user-1.jpg);">
+              <div class="comments__content">
+                <div class="comments__name">
+                  Константин Спилберг
+                </div>
+                <div class="comments__text">
+                  Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                </div>
+                <a href="#" class="section__btn section__btn--comments">Подробнее</a>
               </div>
             </li>
-            <li class="best__item">
-              <div class="best__block-image">
-                <img class="best__block-img" src="img/icons/natural.svg" alt="salat burger">
+            <li class="comments__item" style="background-image: url(img/users/user-2.jpg);">
+              <div class="comments__content">
+                <div class="comments__name">
+                  Константин Спилберг
+                </div>
+                <div class="comments__text">
+                  Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                </div>
+                <a href="#" class="section__btn section__btn--comments">Подробнее</a>
               </div>
-              <h3 class="best__block-title">Натуральные инградиенты</h3>
-              <div class="best__block-text">
-                Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.
+            </li>
+            <li class="comments__item" style="background-image: url(img/users/user-3.jpg);">
+              <div class="comments__content">
+                <div class="comments__name">
+                  Константин Спилберг
+                </div>
+                <div class="comments__text">
+                  Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                </div>
+                <a href="#" class="section__btn section__btn--comments">Подробнее</a>
+              </div>
+            </li>
+            <li class="comments__item" style="background-image: url(img/users/user-4.jpg);">
+              <div class="comments__content">
+                <div class="comments__name">
+                  Константин Спилберг
+                </div>
+                <div class="comments__text">
+                  Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                </div>
+                <a href="#" class="section__btn section__btn--comments">Подробнее</a>
+              </div>
+            </li>
+            <li class="comments__item" style="background-image: url(img/users/user-5.jpg);">
+              <div class="comments__content">
+                <div class="comments__name">
+                  Константин Спилберг
+                </div>
+                <div class="comments__text">
+                  Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                </div>
+                <a href="#" class="section__btn section__btn--comments">Подробнее</a>
+              </div>
+            </li>
+            <li class="comments__item" style="background-image: url(img/users/user-6.jpg);">
+              <div class="comments__content">
+                <div class="comments__name">
+                  Константин Спилберг
+                </div>
+                <div class="comments__text">
+                  Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                </div>
+                <a href="#" class="section__btn section__btn--comments">Подробнее</a>
+              </div>
+            </li>
+            <li class="comments__item" style="background-image: url(img/users/user-7.jpg);">
+              <div class="comments__content">
+                <div class="comments__name">
+                  Константин Спилберг
+                </div>
+                <div class="comments__text">
+                  Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                </div>
+                <a href="#" class="section__btn section__btn--comments">Подробнее</a>
+              </div>
+            </li>
+            <li class="comments__item" style="background-image: url(img/users/user-8.jpg);">
+              <div class="comments__content">
+                <div class="comments__name">
+                  Константин Спилберг
+                </div>
+                <div class="comments__text">
+                  Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                </div>
+                <a href="#" class="section__btn section__btn--comments">Подробнее</a>
               </div>
             </li>
           </ul>
         </div>
-      </div>
-    </section>
+      </section>
+      <footer class="footer">
 
-    <section class="sections comments" id="section-7">
-      <div class="comments__block">
-        <ul class="comments__list">
-          <li class="comments__item" style="background-image: url(img/users/user-1.jpg);">
-            <div class="comment__content">
-              <div class="comment__name">
-                Константин Спилберг
-              </div>
-              <div class="comment__text">
-                Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
-              </div>
-              <a href="#" class="comment_btn">
-                Подробнее
-              </a>
-            </div>
-          </li>
-          <li class="comments__item" style="background-image: url(img/users/user-2.jpg);">
-            <div class="comment__content">
-              <div class="comment__name">
-                Константин Спилберг
-              </div>
-              <div class="comment__text">
-                Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
-              </div>
-              <a href="#" class="comment_btn">
-                Подробнее
-              </a>
-            </div>
-          </li>
-          <li class="comments__item" style="background-image: url(img/users/user-3.jpg);">
-            <div class="comment__content">
-              <div class="comment__name">
-                Константин Спилберг
-              </div>
-              <div class="comment__text">
-                Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
-              </div>
-              <a href="#" class="comment_btn">
-                Подробнее
-              </a>
-            </div>
-          </li>
-          <li class="comments__item" style="background-image: url(img/users/user-4.jpg);">
-            <div class="comment__content">
-              <div class="comment__name">
-                Константин Спилберг
-              </div>
-              <div class="comment__text">
-                Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
-              </div>
-              <a href="#" class="comment_btn">
-                Подробнее
-              </a>
-            </div>
-          </li>
-          <li class="comments__item" style="background-image: url(img/users/user-5.jpg);">
-            <div class="comment__content">
-              <div class="comment__name">
-                Константин Спилберг
-              </div>
-              <div class="comment__text">
-                Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
-              </div>
-              <a href="#" class="comment_btn">
-                Подробнее
-              </a>
-            </div>
-          </li>
-          <li class="comments__item" style="background-image: url(img/users/user-6.jpg);">
-            <div class="comment__content">
-              <div class="comment__name">
-                Константин Спилберг
-              </div>
-              <div class="comment__text">
-                Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
-              </div>
-              <a href="#" class="comment_btn">
-                Подробнее
-              </a>
-            </div>
-          </li>
-          <li class="comments__item" style="background-image: url(img/users/user-7.jpg);">
-            <div class="comment__content">
-              <div class="comment__name">
-                Константин Спилберг
-              </div>
-              <div class="comment__text">
-                Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
-              </div>
-              <a href="#" class="comment_btn">
-                Подробнее
-              </a>
-            </div>
-          </li>
-          <li class="comments__item" style="background-image: url(img/users/user-8.jpg);">
-            <div class="comment__content">
-              <div class="comment__name">
-                Константин Спилберг
-              </div>
-              <div class="comment__text">
-                Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
-              </div>
-              <a href="#" class="comment_btn">
-                Подробнее
-              </a>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <footer class="footer">
-
-    </footer>
+      </footer>
+    </main>
   </div>
   <!-- Fixed section navigation START-->
   <div class="nav-section">
