--- a/index.html
+++ b/index.html
@@ -108,7 +108,49 @@
           </div>
         </div>
       </section>
-      <section class="section team" id="section-3">
+      <section class="section slider" id="section-3">
+        <div class="slider__wrapper">
+          <div class="slider__left"></div>
+          <div class="slider__center">
+            <div class="slider__image">
+              <div class="composition">
+                <a href="#" class="composition__link">
+                  <div class="composition__main">
+                    <svg class="composition__svg">
+                      <use xlink:href="img/sprite.svg#burger"></use>
+                    </svg>
+                    <span class="composition__svg__text">состав</span>
+                  </div>
+                  <ul class="composition__list">
+                    <li class="composition__item">1</li>
+                    <li class="composition__item">2</li>
+                    <li class="composition__item">3</li>
+                    <li class="composition__item">4</li>
+                    <li class="composition__item">5</li>
+                    <li class="composition__item">6</li>
+                  </ul>
+                </a>
+
+              </div>
+              <div class="slider__img">
+                <img class="slider__pic" src="img/burger-black.png" alt="">
+              </div>
+            </div>
+            <div class="slider__text">
+              <h2 class="section__title slider--title">Dark Beff Burger</h2>
+              <p>
+                Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
+              </p>
+              <div class="slider__price">
+                <div class="price"><span>500</span> рублей</div>
+                <a href="#" class="section__btn">Заказать</a>
+              </div>
+            </div>
+          </div>
+          <div class="slider__right"></div>
+        </div>
+      </section>
+      <section class="section team" id="section-4">
         <div class="team__container">
           <div class="team__content">
             <div class="team__block">
@@ -207,7 +249,7 @@
           </div>
         </div>
       </section>
-      <section class="section menu" id="section-4">
+      <section class="section menu" id="section-5">
         <div class="menu__wrapper">
           <div class="menu__title">
             <h2 class="section__title title--menu">Меню</h2>
