Almost finished homework for 3 week

--- a/index.html
+++ b/index.html
@@ -110,7 +110,13 @@
       </section>
       <section class="section slider" id="section-3">
         <div class="slider__wrapper">
-          <div class="slider__left"></div>
+          <div class="slider__left">
+            <a href="#">
+              <svg class="slider__arrow arrow--left">
+                <use xlink:href="img/sprite.svg#arrow-scroll"></use>
+              </svg>
+            </a>
+          </div>
           <div class="slider__center">
             <div class="slider__image">
               <div class="composition">
@@ -122,18 +128,73 @@
                     <span class="composition__svg__text">состав</span>
                   </div>
                   <ul class="composition__list">
-                    <li class="composition__item">1</li>
-                    <li class="composition__item">2</li>
-                    <li class="composition__item">3</li>
-                    <li class="composition__item">4</li>
-                    <li class="composition__item">5</li>
-                    <li class="composition__item">6</li>
+                    <li class="composition__item">
+                      <svg class="comp__svg svg--beef">
+                        <use xlink:href="img/sprite.svg#beef"></use>
+                      </svg>
+                      <span class="comp__product">
+                        Говядина
+                      </span>
+                      <span class="comp__amount">300 г</span>
+                    </li>
+                    <li class="composition__item">
+                      <svg class="comp__svg svg--buns">
+                        <use xlink:href="img/sprite.svg#buns"></use>
+                      </svg>
+                      <span class="comp__product">
+                        Булочки
+                      </span>
+                      <span class="comp__amount">100 г</span>
+                    </li>
+                    <li class="composition__item">
+                      <svg class="comp__svg svg--salad">
+                        <use xlink:href="img/sprite.svg#salad"></use>
+                      </svg>
+                      <span class="comp__product">
+                        Зелень
+                      </span>
+                      <span class="comp__amount">70 г</span>
+                    </li>
+                    <li class="composition__item">
+                      <svg class="comp__svg svg--sauce">
+                        <use xlink:href="img/sprite.svg#sauce"></use>
+                      </svg>
+                      <span class="comp__product">
+                        Соус
+                      </span>
+                      <span class="comp__amount">150 г</span>
+                    </li>
+                    <li class="composition__item">
+                      <svg class="comp__svg svg--cucumber">
+                        <use xlink:href="img/sprite.svg#cucumber"></use>
+                      </svg>
+                      <span class="comp__product">
+                        Овощи
+                      </span>
+                      <span class="comp__amount">200 г</span>
+                    </li>
+                    <li class="composition__item">
+                      <svg class="comp__svg svg--cheese">
+                        <use xlink:href="img/sprite.svg#cheese"></use>
+                      </svg>
+                      <span class="comp__product">
+                        Сыр
+                      </span>
+                      <span class="comp__amount">80 г</span>
+                    </li>
                   </ul>
                 </a>
 
               </div>
               <div class="slider__img">
                 <img class="slider__pic" src="img/burger-black.png" alt="">
+              </div>
+              <div class="kkal">
+                <svg class="kkal__svg">
+                  <text x="13" y="45" class="kkal__num"><tspan>1200</tspan></text>
+                  <use xlink:href="img/sprite.svg#kkal"></use>
+                </svg>
+                <span class="kkal__text">ККАЛ</span>
               </div>
             </div>
             <div class="slider__text">
@@ -147,7 +208,13 @@
               </div>
             </div>
           </div>
-          <div class="slider__right"></div>
+          <div class="slider__right">
+            <a href="#">
+              <svg class="slider__arrow arrow--right">
+                <use xlink:href="img/sprite.svg#arrow-scroll"></use>
+              </svg>
+            </a>
+          </div>
         </div>
       </section>
       <section class="section team" id="section-4">
