Ready homework for the third week

--- a/index.html
+++ b/index.html
@@ -607,6 +607,26 @@
     </ul>
   </div>
   <!-- Fixed section navigation END-->
+  <div class="full-window">
+    <div class="full__top">
+      <div class="logo full--logo">
+        <a href="index.html" class="logo__link">
+          <img class="logo__img" src="img/icons/logo.svg" alt="Mr. Burger логотип">
+        </a>
+      </div>
+      <a href="#" class="full__close"></a>
+    </div>
+    <ul class="full-nav">
+      <li class="full-nav__item"><a class="full-nav__link" href="#">Почему мы</a></li>
+      <li class="full-nav__item"><a class="full-nav__link" href="#">Меню</a></li>
+      <li class="full-nav__item"><a class="full-nav__link" href="#">Советы</a></li>
+      <li class="full-nav__item"><a class="full-nav__link" href="#">Кто мы</a></li>
+      <li class="full-nav__item"><a class="full-nav__link" href="#">Свяжитесь с нами</a></li>
+      <li class="full-nav__item"><a class="full-nav__link" href="#">Контакты</a></li>
+    </ul>
+  </div>
 </body>
+<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </html>
