--- a/index.html
+++ b/index.html
@@ -111,16 +111,16 @@
       <section class="section slider" id="section-3">
         <div class="slider__wrapper">
           <div class="slider__left">
-            <a href="#">
+            <button class="slider__btn">
               <svg class="slider__arrow arrow--left">
                 <use xlink:href="img/sprite.svg#arrow-scroll"></use>
               </svg>
-            </a>
+            </button>
           </div>
           <div class="slider__center">
             <div class="slider__image">
               <div class="composition">
-                <a href="#" class="composition__link">
+                <button class="composition__btn">
                   <div class="composition__main">
                     <svg class="composition__svg">
                       <use xlink:href="img/sprite.svg#burger"></use>
@@ -183,7 +183,7 @@
                       <span class="comp__amount">80 г</span>
                     </li>
                   </ul>
-                </a>
+                </button>
 
               </div>
               <div class="slider__img">
@@ -198,7 +198,7 @@
               </div>
             </div>
             <div class="slider__text">
-              <h2 class="section__title slider--title">Dark Beff Burger</h2>
+              <h3 class="burger__title">Dark Beff Burger</h3>
               <p>
                 Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
               </p>
@@ -209,11 +209,11 @@
             </div>
           </div>
           <div class="slider__right">
-            <a href="#">
+            <button class="slider__btn">
               <svg class="slider__arrow arrow--right">
                 <use xlink:href="img/sprite.svg#arrow-scroll"></use>
               </svg>
-            </a>
+            </button>
           </div>
         </div>
       </section>
@@ -368,7 +368,9 @@
                     Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
                   </p>
                 </div>
-                <a href="#" class="section__btn section__btn--comments">Подробнее</a>
+                <div class="comments__btn">
+                  <a href="#" class="section__btn section__btn--comments">Подробнее</a>
+                </div>
               </div>
             </li>
             <li class="comments__item" style="background-image: url(img/users/user-2.jpg);">
@@ -381,7 +383,9 @@
                     Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
                   </p>
                 </div>
-                <a href="#" class="section__btn section__btn--comments">Подробнее</a>
+                <div class="comments__btn">
+                  <a href="#" class="section__btn section__btn--comments">Подробнее</a>
+                </div>
               </div>
             </li>
             <li class="comments__item" style="background-image: url(img/users/user-3.jpg);">
@@ -394,7 +398,9 @@
                     Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
                   </p>
                 </div>
-                <a href="#" class="section__btn section__btn--comments">Подробнее</a>
+                <div class="comments__btn">
+                  <a href="#" class="section__btn section__btn--comments">Подробнее</a>
+                </div>
               </div>
             </li>
             <li class="comments__item" style="background-image: url(img/users/user-4.jpg);">
@@ -407,7 +413,9 @@
                     Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
                   </p>
                 </div>
-                <a href="#" class="section__btn section__btn--comments">Подробнее</a>
+                <div class="comments__btn">
+                  <a href="#" class="section__btn section__btn--comments">Подробнее</a>
+                </div>
               </div>
             </li>
             <li class="comments__item" style="background-image: url(img/users/user-5.jpg);">
@@ -420,7 +428,9 @@
                     Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
                   </p>
                 </div>
-                <a href="#" class="section__btn section__btn--comments">Подробнее</a>
+                <div class="comments__btn">
+                  <a href="#" class="section__btn section__btn--comments">Подробнее</a>
+                </div>
               </div>
             </li>
             <li class="comments__item" style="background-image: url(img/users/user-6.jpg);">
@@ -433,7 +443,9 @@
                     Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
                   </p>
                 </div>
-                <a href="#" class="section__btn section__btn--comments">Подробнее</a>
+                <div class="comments__btn">
+                  <a href="#" class="section__btn section__btn--comments">Подробнее</a>
+                </div>
               </div>
             </li>
             <li class="comments__item" style="background-image: url(img/users/user-7.jpg);">
@@ -446,7 +458,9 @@
                     Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
                   </p>
                 </div>
-                <a href="#" class="section__btn section__btn--comments">Подробнее</a>
+                <div class="comments__btn">
+                  <a href="#" class="section__btn section__btn--comments">Подробнее</a>
+                </div>
               </div>
             </li>
             <li class="comments__item" style="background-image: url(img/users/user-8.jpg);">
@@ -459,7 +473,9 @@
                     Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
                   </p>
                 </div>
-                <a href="#" class="section__btn section__btn--comments">Подробнее</a>
+                <div class="comments__btn">
+                  <a href="#" class="section__btn section__btn--comments">Подробнее</a>
+                </div>
               </div>
             </li>
           </ul>
@@ -473,11 +489,11 @@
                 <div class="form__row">
                   <label class="form__label">
                     <span class="form__span-title">Имя</span>
-                    <input type="text" name="name" class="form__input">
+                    <input type="text" name="name" class="form__input" placeholder="Ваше имя">
                   </label>
                   <label class="form__label">
                     <span class="form__span-title">Телефон</span>
-                    <input type="text" name="name" class="form__input">
+                    <input type="text" name="name" class="form__input" placeholder="+7(567)245-34-67">
                   </label>
                 </div>
                 <div class="form__row">
@@ -509,7 +525,7 @@
                 <div class="form__row">
                   <label class="form__label label-textarea">
                     <span class="form__span-title">Комментарий</span>
-                    <textarea class="form__textarea"></textarea>
+                    <textarea class="form__textarea" placeholder="Во дворе злая собака"></textarea>
                   </label>
                 </div>
                 <div class="form__row">
@@ -541,6 +557,12 @@
         </div>
       </section>
       <section class="section map" id="section-8">
+        <div class="content-map">
+          <!-- <div id="map" style="width: 600px; height: 400px"></div> -->
+          <div class="burger__map" id="yandexMap">
+
+          </div>
+        </div>
         <footer class="footer">
           <div class="container footer--container">
             <div class="footer__left">
@@ -626,7 +648,9 @@
     </ul>
   </div>
 </body>
+
 <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+<script src="https://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU" type="text/javascript"></script>
 <script type="text/javascript" src="js/main.js"></script>
 <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </html>
