Add linck in menu, update accordeons

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             <div class="header__right">
               <nav class="main-nav">
                 <ul class="main-nav__list">
-                  <li class="main-nav__item"><a class="main-nav__link" href="#">О нас</a></li>
-                  <li class="main-nav__item"><a class="main-nav__link" href="#">Бургеры</a></li>
-                  <li class="main-nav__item"><a class="main-nav__link" href="#">Команда</a></li>
-                  <li class="main-nav__item"><a class="main-nav__link" href="#">Меню</a></li>
-                  <li class="main-nav__item"><a class="main-nav__link" href="#">Отзывы</a></li>
-                  <li class="main-nav__item"><a class="main-nav__link" href="#">Контакты</a></li>
+                  <li class="main-nav__item"><a class="main-nav__link" href="#section-1">О нас</a></li>
+                  <li class="main-nav__item"><a class="main-nav__link" href="#section-3">Бургеры</a></li>
+                  <li class="main-nav__item"><a class="main-nav__link" href="#section-4">Команда</a></li>
+                  <li class="main-nav__item"><a class="main-nav__link" href="#section-5">Меню</a></li>
+                  <li class="main-nav__item"><a class="main-nav__link" href="#section-6">Отзывы</a></li>
+                  <li class="main-nav__item"><a class="main-nav__link" href="#section-7">Контакты</a></li>
                 </ul>
               </nav>
               <div class="header__right-btn">
@@ -51,7 +51,7 @@
             </figure>
           </div>
           <div class="header__arrow-down">
-            <a href="#" class="arrow-down__link">
+            <a href="#section-2" class="arrow-down__link">
               <svg class="arrow-down__svg">
                 <use xlink:href="img/sprite.svg#arrow-scroll"></use>
               </svg>
